src/test/ui/nll/user-annotations/pattern_substs_on_tuple_enum_variant.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_tuple_enum_variant.rs:9:24
   |
LL |     let foo = Foo::Bar(&y);
   |                        ^^ borrowed value does not live long enough
...
LL | }
   | - `y` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_tuple_enum_variant.rs:16:24
   |
LL |     let foo = Foo::Bar(&y);
   |                        ^^ borrowed value does not live long enough
...
LL | }
   | - `y` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
